--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,32 +1,24 @@
 * {
-  font-family: "Roboto", sans-serif;
-  box-sizing: border-box;
+   font-family: "Roboto", sans-serif;
+   box-sizing: border-box;
+}
+body {
+   background-color: #f6f8fc;
 }
 .content {
-  padding: 1rem;
+   height: 100vh;
+   width: 100vh;
+   padding: 1rem;
+   background-color: #fff;
+}
+@media screen and (min-width: 992px) {
+   .content {
+      max-width: 992px;
+      height: auto;
+      margin: 1rem auto;
+      border-radius: 1rem;
+   }
 }
 .content h1 {
-  /* margin: 0; */
-}
-
-.pokemons {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-.pokemon {
-  padding: 2rem 1rem;
-  margin: 0.5rem;
-  background-color: #1cc9a9;
-  color: #fff;
-  border-radius: 1rem;
-  display: flex;
-  flex-direction: column;
-}
-
-.pokemon .detail img {
-  max-width: 100%;
-  height: 100px;
+   /* margin: 0; */
 }
