--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -1,3 +1,51 @@
+.normal {
+   background-color: #a6a877;
+}
+.grass {
+   background-color: #77c850;
+}
+.fire {
+   background-color: #ee7f30;
+}
+.water {
+   background-color: #678fee;
+}
+.electric {
+   background-color: #f7cf2e;
+}
+.ice {
+   background-color: #98d5d7;
+}
+.ground {
+   background-color: #dfb769;
+}
+.flying {
+   background-color: #a98ff0;
+}
+.poison {
+   background-color: #a040a0;
+}
+.fighting {
+   background-color: #bf3029;
+}
+.psychic {
+   background-color: #f65687;
+}
+.bug {
+   background-color: #a8b720;
+}
+.ghost {
+   background-color: #6e5896;
+}
+.dragon {
+   background-color: #6f38f6;
+}
+.fairy {
+   background-color: #f9aec7;
+}
+.dark {
+   background-color: #725847;
+}
 .pokemons {
    display: grid;
    grid-template-columns: 1fr;
@@ -12,11 +60,11 @@
    margin: 0.5rem;
    padding: 1rem;
    border-radius: 1rem;
-   background-color: #49d0b0;
    color: #fff;
 }
 .pokemon .name {
    color: #fff;
+   text-transform: capitalize;
    margin-bottom: 0;
 }
 .pokemon .number {
@@ -36,18 +84,36 @@
    list-style: none;
 }
 .pokemon .detail .types .type {
-   background-color: #61e1ca;
    color: #fff;
    padding: 0.25rem 0.5rem;
    margin: 0.25rem 0;
    font-size: 0.625rem;
    border-radius: 1rem;
+   filter: brightness(1.1);
+   text-align: center;
 }
 
 .pokemon .detail img {
    max-width: 100%;
    height: 70px;
 }
+.pagination {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   width: 100%;
+   padding: 0.25rem 0.5rem;
+   margin: 0.25rem 0rem;
+   font-size: 0.625rem;
+}
+.pagination button {
+   background-color: #6c79db;
+   border: none;
+   border-radius: 1rem;
+   color: #fff;
+   padding: 0.25;
+}
+
 @media screen and (min-width: 380px) {
    .pokemons {
       grid-template-columns: 1fr 1fr;
